# knowledge-base-auditor

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.postgres.yml  pyproject.toml
.github/workflows/: ci.yml
docker/pg-init/: 01_create_test_db.sql
docs/: PRD.md  Persistence Boundary Inventory.md  Product Brief.md  TDD.md
examples/: sample_config.yaml
migrations/: README  env.py
migrations/versions/: 0001_initial_schema.py
src/kb_audit/: __init__.py  auditor.py  cli.py  config.py  db.py  models.py  titles.py  trust.py
src/kb_audit/analyzers/: base.py  broken_links.py  internal_links.py  references.py  similarity.py  timestamp.py  version_refs.py
src/kb_audit/reporters/: base.py  console.py  json_reporter.py
src/kb_audit/sources/: base.py  confluence.py  demo.py  notion.py
src/kb_audit/storage/: __init__.py  contracts.py  factory.py  pg_readiness.py  postgres.py  postgres_support.py  schema.py  schema_postgres.py  serialization.py  sqlite.py
src/kb_audit/web/: app.py
src/kb_audit/web/templates/: index.html
tests/: conftest.py  test_alembic_migrations.py  test_auditor.py  test_broken_links.py  test_browser.py  test_cli.py  test_config.py  test_db.py  test_demo_pipeline.py  test_edge_cases.py  test_golden_corpus.py  test_golden_scenarios.py  test_internal_links.py  test_models.py  test_payments_corpus.py  test_payments_scenarios.py  test_pg_readiness.py  test_postgres_support.py  test_references.py  test_schema_postgres.py  test_storage_conformance.py  test_storage_contracts.py  test_storage_factory.py  test_storage_postgres.py  test_storage_postgres_live.py  test_storage_schema.py  test_storage_serialization.py  test_storage_sqlite.py  test_template.py  test_titles.py  test_trust.py  test_web.py  test_workflow.py
tests/analyzers/: test_broken_links.py  test_references.py  test_similarity.py  test_timestamp.py  test_version_refs.py
tests/reporters/: test_json_reporter.py
tests/sources/: test_confluence.py  test_demo.py  test_notion.py
