[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kb-audit"
version = "0.1.0"
description = "Detect stale and outdated documentation in your knowledge base"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "playwright>=1.44",
    "pytest-playwright>=0.5",
    "uvicorn[standard]>=0.30",
]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
kb-audit = "kb_audit.cli:cli"
kb-audit-web = "kb_audit.web.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kb_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "browser: Playwright browser tests requiring installed Chromium",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
